--- a/assets/main.css
+++ b/assets/main.css
@@ -42,7 +42,8 @@ img.profile-pic {
 }
 
 #qr-code {
-	display: none;
+	object-fit: cover;
+        display: none;
 	height: 150px;
 	width: 150px;
 	margin: 0;
