--- a/assets/main.css
+++ b/assets/main.css
@@ -43,7 +43,7 @@ img.profile-pic {
 
 img.qr-code {
         object-fit: cover;
-        border-radius: 20px;
+        border-radius: 10%; /*20px;*/
         /* display: none; */
 	height: 200px;
 	width: 200px;
